--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,8 @@
-[metadata]  # FIXME
+[metadata]
 author= Klaus Happacher
 author_email= k.happacher@gmail.com
 version = 0.0
-description =
-long_description =
+description = compress measurements
 license = MIT
 
 [options]
