--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ setup_requires=
 tests_require=
     pytest>=6.2.3
 install_requires =
+    matplotlib>=3.2.0
 
 [tool:pytest]
 norecursedirs = extern/*
